Adjust docker manifests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - 9340:9339
     volumes:
       - ./testdata.json:/opt/testdata.json
-    command: "-bind_address :9339 -config /opt/testdata.json -notls"
+    command: "-notls"
   oc02:
     image: gnmi_fake
     ports:
       - 9341:9339
     volumes:
       - ./testdata.json:/opt/testdata.json
-    command: "-bind_address :9339 -config /opt/testdata.json -notls"
+    command: "-notls"
